Docs update and products fixes to be more  analytic
