# docs/swagger.json
@@ -48,7 +48,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/Product"
+                                "$ref": "#/definitions/BaseProduct"
                             }
                         }
                     }
@@ -179,7 +179,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dao.PlainProduct"
+                            "$ref": "#/definitions/ChangedProduct"
                         }
                     }
                 ],
@@ -216,7 +216,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Product"
+                            "$ref": "#/definitions/BaseProduct"
                         }
                     }
                 }
@@ -224,13 +224,9 @@
         }
     },
     "definitions": {
-        "Product": {
-            "description": "Product represents a product in the inventory",
+        "BaseProduct": {
+            "description": "Represents a product in the inventory with all its details",
             "type": "object",
-            "required": [
-                "name",
-                "sku"
-            ],
             "properties": {
                 "availability": {
                     "type": "boolean"
@@ -258,23 +254,25 @@
                 }
             }
         },
-        "Products": {
+        "ChangedProduct": {
+            "description": "Represents the details of a product to be changed in the inventory",
             "type": "object",
             "required": [
-                "products"
+                "product"
             ],
             "properties": {
-                "products": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Product"
-                    }
+                "product": {
+                    "$ref": "#/definitions/UpdateProduct"
                 }
             }
         },
-        "UpdateProduct": {
-            "description": "UpdateProduct represents a product update in the inventory",
+        "CreatedProduct": {
+            "description": "Represents the details of a new product to be created in the inventory",
             "type": "object",
+            "required": [
+                "name",
+                "sku"
+            ],
             "properties": {
                 "availability": {
                     "type": "boolean"
@@ -299,14 +297,45 @@
                 }
             }
         },
-        "dao.PlainProduct": {
+        "Products": {
+            "description": "Represents a list of new products to be created in the inventory",
             "type": "object",
             "required": [
-                "product"
+                "products"
             ],
             "properties": {
-                "product": {
-                    "$ref": "#/definitions/UpdateProduct"
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/CreatedProduct"
+                    }
+                }
+            }
+        },
+        "UpdateProduct": {
+            "description": "Represents the details of a product that are to be updated in the inventory",
+            "type": "object",
+            "properties": {
+                "availability": {
+                    "type": "boolean"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "sku": {
+                    "type": "string"
+                },
+                "stock": {
+                    "type": "integer"
                 }
             }
         }
